# brewsignal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  HANDOVER.md  INTEGRATION_TEST_REPORT.md  MANUAL_TEST_RESULTS.md  ML_INTEGRATION_REVIEW.md  README.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  SECURITY_SUMMARY.md  VULNERABILITY_POC.md  gravitymon_formula_plato.txt  pyproject.toml  railway.toml
.beads/: .gitignore  issues.jsonl  sync_base.jsonl
backend/: CLAUDE.md  auth.py  chamber_poller.py  config.py  database.py  main.py  models.py  models_device.py  mqtt_manager.py  scanner.py  state.py  supabase_client.py  temp_controller.py  websocket.py
deploy/: brewsignal.service  deploy.sh  install.sh  tiltui.service
docs/: BEERXML_TO_BEERJSON_CONVERSION.md  BREWFATHER_FORMAT_ANALYSIS.md  BREWSIGNAL_RECIPE_FORMAT_V1.md  Brewfather_BeerXML_PhilterXPAClone_20251207.xml  Brewfather_RECIPE_PhilterXPAClone_20251207.json  Brewfather_to_BeerJSON_output.json  design-system.md  gravitymon_formula.txt  recipe-format-v2-design.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vercel.json  vitest.config.ts
plans/: 2025-12-09-mpc-integration.md  backend-validation-utilities-brewsignal-format-SIMPLIFIED.md  backend-validation-utilities-brewsignal-format.md  integrate-ml-pipeline-with-main-application.md
scripts/: scrape_beermaverick.py  scrape_yeast_data.py
supabase/: .gitignore  config.toml
tests/: conftest.py  test_anomaly.py  test_batch_time_helpers.py  test_beerjson_migration.py  test_beerjson_validator.py  test_beerxml_converter.py  test_beerxml_parser.py  test_brewfather_converter.py  test_brewsignal_format.py  test_brewsignal_security.py  test_mpc.py  (+23 more)
(+4390 files in other folders)
